# rmpc

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: commands.rs  main.rs
