[package]
name = "rmpc"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
description = "Reimplementation of mpc in Rust-lang"
version = "0.1.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/haruki7049/rmpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
mpd = "0.1.0"
time = "0.3.41"
